@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<creole>
+
+    <files>
+        <file name='/etc/clamav/clamd.conf'/>
+        <file name='/etc/clamav/freshclam.conf'/>
+    </files>
+        
+    <variables>
+        <family name='clamav' mode='expert'>
+            <variable name='clam_max_file_size' type='number' description='Taille maximum pour un fichier à scanner (en Mo)'>
+                <value>5</value>
+            </variable>
+            <variable name='clam_max_scan_size' type='number' description='Quantité de données maximum à scanner pour une archive (en Mo)'>
+                <value>20</value>
+            </variable>
+            <variable name='clam_max_recursion' type='number' description='Profondeur maximale pour le scan des archives'>
+                <value>12</value>
+            </variable>
+            <variable name='clam_max_files' type='number' description='Nombre maximum de fichiers à scanner dans une archive'>
+                <value>5000</value>
+            </variable>
+            <variable name='clam_detect_pua' type='string' description='Détection des applications indésirables'>
+                <value>no</value>
+            </variable>
+            <variable name='clam_scan_pdf' type='string' description='Scan du contenu des fichiers PDF'>
+                <value>no</value>
+            </variable>
+            <variable name='clam_broken_exe' type='string' description='Détection des fichiers exécutables corrompus'>
+                <value>no</value>
+            </variable>
+        </family>
+    </variables>
+    
+    <constraints>
+        <check name='obligatoire' target='clam_max_file_size'/>
+        <check name='obligatoire' target='clam_max_scan_size'/>
+        <check name='obligatoire' target='clam_max_recursion'/>
+        <check name='obligatoire' target='clam_max_files'/>
+        <check name='valid_enum' target='clam_detect_pua'>
+            <param>['yes','no']</param>
+        </check>
+        <check name='valid_enum' target='clam_scan_pdf'>
+            <param>['yes','no']</param>
+        </check>
+        <check name='valid_enum' target='clam_broken_exe'>
+            <param>['yes','no']</param>
+        </check>
+    </constraints>
+ 
+    <help>
+    </help>
+
+</creole>
